--- a/estilo.css
+++ b/estilo.css
@@ -13,7 +13,8 @@ body{
 section{
     margin: auto;
     background-color: white;
-    width: 500px;
+    min-width: 320px;
+    max-width: 500px;
     padding: 15px;
     border-radius: 10px;
     box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.329);
@@ -21,6 +22,7 @@ section{
 }
 
 header{
+    margin: auto;
     text-shadow: 0.1px 1px 5px black;
     text-align: center;
     color: white;
